# Kutinf

./: README.md
Kut/: CMakeLists.txt  README.md
Kut/doc/: CMakeLists.txt  euler_project.tex
Kut/futtatas/: CMakeLists.txt  Euler.c  Euler.hpp  Euler.hpp.in
Kut/plotter/: CMakeLists.txt  eulerplot.p  eulerplot.plot
